# Group-13-Compiler-Project

./: .gitignore  CMakeLists.txt  README.md  factorial.ll
demos/: factorial.sl  fibonacci.sl  loops.sl  mathematics.sl  simple_interest.sl
docs/: SimpleLang_Specification.md
docs/demo/: Presentation_Guide.md
docs/technical/: Architecture.md
src/: AST.cpp  AST.h  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h  main.cpp
tests/: run_tests.sh
